# network-outage-monitor

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/network_outage_monitor/: main.py
