[project]
name = "network_outage_monitor"
version = "0.1.0"
description = "Monitor LAN to WAN outages"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "datetime>=5.5",
    "polars>=1.33.1",
    "requests>=2.32.5",
    "typing>=3.10.0.0",
]

[project.scripts]
network_outage_monitor = "network_outage_monitor.main:main"

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint]
select = [
    "F",   # pyflakes
    "E",   # pycodestyle
    "I",   # isort
    "ANN", # flake8 type annotations
    "RUF", # ruff-specific rules
]
fixable = ["ALL"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"
